test/Constraints/keypath_closure_conv_mismatch_norettype.code
// RUN: %target-language-frontend -typecheck -verify -primary-file %s

// rdar://problem/57930643
struct School {
  var name: String
}
fn testKeyPathClosureLiteralError() {
  immutable slist = [School(name:"AHS"), School(name:"BHS")]
  _ = slist.sorted(by: \School.name) // expected-error {{cannot convert key path into a multi-argument function type '(School, School) throws -> Bool'}}
}
